error.txt
Errors     << bump_tolerant_control:make /home/nicolo/mrs_ws/logs/bump_tolerant_control/build.make.119.log                                                                                                        
/home/nicolo/mrs_ws/src/bump_tolerant_control/src/bump_tolerant_controller.cpp: In member function ‘virtual mrs_uav_managers::Controller::ControlOutput bump_tolerant_controller_plugin::bump_tolerant_controller::BumpTolerantController::updateActive(const UavState&, const TrackerCommand&)’:
/home/nicolo/mrs_ws/src/bump_tolerant_control/src/bump_tolerant_controller.cpp:542:30: error: redeclaration of ‘mrs_msgs::HwApiAttitudeCmd attitude_cmd’
  542 |   mrs_msgs::HwApiAttitudeCmd attitude_cmd;
      |                              ^~~~~~~~~~~~
/home/nicolo/mrs_ws/src/bump_tolerant_control/src/bump_tolerant_controller.cpp:418:32: note: ‘mrs_msgs::HwApiAttitudeCmd attitude_cmd’ previously declared here
  418 |     mrs_msgs::HwApiAttitudeCmd attitude_cmd;
      |                                ^~~~~~~~~~~~
/home/nicolo/mrs_ws/src/bump_tolerant_control/src/bump_tolerant_controller.cpp:546:10: error: redeclaration of ‘double force’
  546 |   double force = common_handlers_->getMass() * (g + acc_z);
      |          ^~~~~
/home/nicolo/mrs_ws/src/bump_tolerant_control/src/bump_tolerant_controller.cpp:416:12: note: ‘double force’ previously declared here
  416 |     double force = common_handlers_->getMass() * common_handlers_->g;
      |            ^~~~~
/home/nicolo/mrs_ws/src/bump_tolerant_control/src/bump_tolerant_controller.cpp:567:67: error: qualified-id in declaration before ‘(’ token
  567 | const mrs_msgs::ControllerStatus BumpTolerantController::getStatus() {
      |                                                                   ^
/home/nicolo/mrs_ws/src/bump_tolerant_control/src/bump_tolerant_controller.cpp:580:50: error: qualified-id in declaration before ‘(’ token
  580 | void BumpTolerantController::switchOdometrySource([[maybe_unused]] const mrs_msgs::UavState& new_uav_state) {
      |                                                  ^
/home/nicolo/mrs_ws/src/bump_tolerant_control/src/bump_tolerant_controller.cpp:587:56: error: qualified-id in declaration before ‘(’ token
  587 | void BumpTolerantController::resetDisturbanceEstimators(void) {
      |                                                        ^
/home/nicolo/mrs_ws/src/bump_tolerant_control/src/bump_tolerant_controller.cpp:594:96: error: qualified-id in declaration before ‘(’ token
  594 | const mrs_msgs::DynamicsConstraintsSrvResponse::ConstPtr BumpTolerantController::setConstraints([
      |                                                                                                ^
/home/nicolo/mrs_ws/src/bump_tolerant_control/src/bump_tolerant_controller.cpp:616:84: error: qualified-id in declaration before ‘(’ token
  616 | BumpTolerantController::ControlOutput BumpTolerantController::hoveringControlOutput(double dt) { // Added dt argument
      |                                                                                    ^
/home/nicolo/mrs_ws/src/bump_tolerant_control/src/bump_tolerant_controller.cpp:677:41: error: qualified-id in declaration before ‘(’ token
  677 | void BumpTolerantController::callbackDrs(bump_tolerant_controller_plugin::bump_tolerant_controllerConfig& config, [[maybe_unused]] uint32_t level) {
      |                                         ^
/home/nicolo/mrs_ws/src/bump_tolerant_control/src/bump_tolerant_controller.cpp:687:46: error: qualified-id in declaration before ‘(’ token
  687 | void BumpTolerantController::timerDiagnostics([[maybe_unused]] const ros::TimerEvent& event) {
      |                                              ^
/home/nicolo/mrs_ws/src/bump_tolerant_control/src/bump_tolerant_controller.cpp:282:145: warning: unused parameter ‘tracker_command’ [-Wunused-parameter]
  282 | BumpTolerantController::ControlOutput BumpTolerantController::updateActive(const mrs_msgs::UavState& uav_state, const mrs_msgs::TrackerCommand& tracker_command) {
      |                                                                                                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~
In file included from /opt/ros/noetic/include/class_loader/class_loader.hpp:47,
                 from /opt/ros/noetic/include/pluginlib/./class_list_macros.hpp:40,
                 from /opt/ros/noetic/include/pluginlib/class_list_macros.h:35,
                 from /home/nicolo/mrs_ws/src/bump_tolerant_control/src/bump_tolerant_controller.cpp:736:
/home/nicolo/mrs_ws/src/bump_tolerant_control/src/bump_tolerant_controller.cpp: At global scope:
/opt/ros/noetic/include/class_loader/register_macro.hpp:53:3: error: expected ‘}’ at end of input
   53 |   }  // namespace
      |   ^
/opt/ros/noetic/include/class_loader/register_macro.hpp:56:3: note: in expansion of macro ‘CLASS_LOADER_REGISTER_CLASS_INTERNAL_WITH_MESSAGE’
   56 |   CLASS_LOADER_REGISTER_CLASS_INTERNAL_WITH_MESSAGE(Derived, Base, UniqueID, Message)
      |   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/ros/noetic/include/class_loader/register_macro.hpp:63:3: note: in expansion of macro ‘CLASS_LOADER_REGISTER_CLASS_INTERNAL_HOP1_WITH_MESSAGE’
   63 |   CLASS_LOADER_REGISTER_CLASS_INTERNAL_HOP1_WITH_MESSAGE(Derived, Base, __COUNTER__, Message)
      |   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/ros/noetic/include/class_loader/register_macro.hpp:70:3: note: in expansion of macro ‘CLASS_LOADER_REGISTER_CLASS_WITH_MESSAGE’
   70 |   CLASS_LOADER_REGISTER_CLASS_WITH_MESSAGE(Derived, Base, "")
      |   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/ros/noetic/include/pluginlib/./class_list_macros.hpp:49:3: note: in expansion of macro ‘CLASS_LOADER_REGISTER_CLASS’
   49 |   CLASS_LOADER_REGISTER_CLASS(class_type, base_class_type)
      |   ^~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/nicolo/mrs_ws/src/bump_tolerant_control/src/bump_tolerant_controller.cpp:737:1: note: in expansion of macro ‘PLUGINLIB_EXPORT_CLASS’
  737 | PLUGINLIB_EXPORT_CLASS(bump_tolerant_controller_plugin::bump_tolerant_controller::BumpTolerantController, mrs_uav_managers::Controller)
      | ^~~~~~~~~~~~~~~~~~~~~~
/home/nicolo/mrs_ws/src/bump_tolerant_control/src/bump_tolerant_controller.cpp:26:1: note: to match this ‘{’
   26 | {
      | ^
/home/nicolo/mrs_ws/src/bump_tolerant_control/src/bump_tolerant_controller.cpp: In member function ‘virtual mrs_uav_managers::Controller::ControlOutput bump_tolerant_controller_plugin::bump_tolerant_controller::BumpTolerantController::updateActive(const UavState&, const TrackerCommand&)’:
/home/nicolo/mrs_ws/src/bump_tolerant_control/src/bump_tolerant_controller.cpp:733:1: warning: control reaches end of non-void function [-Wreturn-type]
  733 | }  // namespace bump_tolerant_controller
      | ^
make[2]: *** [CMakeFiles/BumpTolerantController.dir/build.make:63: CMakeFiles/BumpTolerantController.dir/src/bump_tolerant_controller.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:2260: CMakeFiles/BumpTolerantController.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
cd /home/nicolo/mrs_ws/build/bump_tolerant_control; catkin build --get-env bump_tolerant_control | catkin env -si  /usr/bin/make --jobserver-auth=3,4; cd -

